--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div id="aboutme-food" class="aboutme-contant">
-            <h2>About Me</h2>
+            <h2>About Me.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur mollitia aliquid officiis minus minima
                 eum, porro recusandae tempore, quos nisi ipsam illum? Facilis tempora asperiores rem nostrum,
                 repudiandae sequi eum!</p>
